--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-
+    implementation 'com.github.chuross:flinglayout:0.5.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation ("com.github.bumptech.glide:glide:4.7.1@aar") {
         transitive = true
     }
