--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,12 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+systemProp.http.proxyPassword=fzkuRa3khnlpxvb2
+systemProp.https.proxyUser=kamaz\\gabdrakhmanovii
+systemProp.https.proxyPort=8080
+systemProp.http.proxyHost=s-tmg.kamaz.org
+systemProp.https.proxyPassword=fzkuRa3khnlpxvb2
+systemProp.https.proxyHost=s-tmg.kamaz.org
+systemProp.http.proxyUser=kamaz\\gabdrakhmanovii
+systemProp.http.proxyPort=8080
