--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.github.chuross:flinglayout:0.5.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
-    implementation ("com.github.bumptech.glide:glide:4.7.1@aar") {
+    implementation("com.github.bumptech.glide:glide:4.7.1@aar") {
         transitive = true
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'ru.alexbykov:nopaginate:0.4.4'
 }
