--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,24 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-systemProp.http.proxyPassword=fzkuRa3khnlpxvb2
-systemProp.https.proxyUser=kamaz\\gabdrakhmanovii
-systemProp.https.proxyPort=8080
-systemProp.http.proxyHost=s-tmg.kamaz.org
-systemProp.https.proxyPassword=fzkuRa3khnlpxvb2
-systemProp.https.proxyHost=s-tmg.kamaz.org
-systemProp.http.proxyUser=kamaz\\gabdrakhmanovii
+#Wed Apr 25 07:37:42 MSK 2018
 systemProp.http.proxyPort=8080
+systemProp.http.proxyUser=kamaz\\gabdrakhmanovii
+systemProp.http.proxyPassword=fzkuRa3khnlpxvb2
+org.gradle.jvmargs=-Xmx1536m
+systemProp.https.proxyPassword=fzkuRa3khnlpxvb2
+systemProp.https.proxyHost=s-tmg
+systemProp.http.proxyHost=s-tmg
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=kamaz\\gabdrakhmanovii
