--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".browse.fullScreenImage.FullScreenImageActivity"
-            android:theme="@style/Theme.Transparent"
-            >
-
-        </activity>
+        <activity
+            android:name=".browse.fullScreenImage.FullScreenImageActivity"
+            android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name=".browse.photos.CategoryImagesListActivity"></activity>
     </application>
 
 </manifest>
