Коммит на всякий перед изменениями

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,10 @@
         </activity>
         <activity
             android:name=".browse.fullScreenImage.FullScreenImageActivity"
-            android:theme="@style/Theme.Transparent"></activity>
-        <activity android:name=".browse.photos.CategoryImagesListActivity"></activity>
+            android:theme="@style/Theme.Transparent">
+        </activity>
+        <activity android:name=".browse.photos.CategoryImagesListActivity">
+        </activity>
     </application>
 
 </manifest>
