--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.7.1'
     implementation 'ru.alexbykov:nopaginate:0.4.4'
+    implementation 'com.github.yehiahd:FastSave-Android:1.0.3'
 }
